--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
 
-  <p>  FOLLOW THE SEQUENCE OF THE GAME IN THE COLOR AND PRESS ACCORDINGLY :) </p>
+   <p>  P.S Follow the sequnece of the color in the game and press accordingly. </p>
   <div class="container">
     <div class="row">
 
@@ -37,6 +37,10 @@
     </div>
 
   </div>
+
+
+
+  <footer> Made by Puja Shah :) </footer>
   <!-- JQUERY -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="game.js"></script>
