--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
 
-  <footer> Made by Puja Shah :) </footer>
+  <footer class="foot"> Made by Puja Shah :) </footer>
   <!-- JQUERY -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="game.js"></script>
